# longterm_fetch_and_place

./: .gitignore  .gitmodules  README.md  build_external.sh
attache_msgs/: CMakeLists.txt
ltfnp/: CMakeLists.txt  package.xml
ltfnp_executive/: CMakeLists.txt  ltfnp-executive.asd  package.xml
ltfnp_executive/assets/: ltfnp_automation.yaml
ltfnp_executive/launch/: kitchen_start.launch  ltfnp.launch  ltfnp_automated.launch  ltfnp_pr2.launch  ltfnp_simulation.launch  pr2_manipulation.launch  start.launch
ltfnp_executive/scripts/: continuous.py  init.sh  kill_all_relevant.sh  kill_type.sh  ltfnp.yaml  package_log.sh  prep_camera.sh  prep_mongodb.sh  run_n.sh  run_n_ex.sh  start.sh
ltfnp_executive/scripts/tools/: Worker.py
ltfnp_executive/src/: costmap-metadata.lisp  facts.lisp  handles.lisp  package.lisp  plan-library.lisp  planner.lisp  planner_v2.lisp  plans-process-module.lisp  reasoning.lisp  sem-map-config.lisp  table-setting.lisp  top-level-plans.lisp  utils.lisp
ltfnp_gazebo/: CMakeLists.txt  package.xml
ltfnp_gazebo/launch/: empty_world.launch  kitchen_ltfnp.launch  ltfnp.launch  pr2.launch  pr2_no_controllers.launch
ltfnp_gazebo/worlds/: empty_world_with_plugins.world  ltfnp.world
ltfnp_maps/: CMakeLists.txt  package.xml
ltfnp_maps/launch/: descriptions.launch  ltfnp_maps.launch  map.launch  transformations.launch
ltfnp_maps/maps/: map.pgm  map_new.pgm  shopping_area.yaml  shopping_area_new.yaml
ltfnp_models/: .gitignore  CMakeLists.txt  README.md  Todo.txt  package.xml
ltfnp_models/defs/: helpers.xml  inertia.xml  materials.xml  utils.xml
ltfnp_models/models/buttermilk/: ReineButterMilch.dae  buttermilk.urdf.xml  model.config
ltfnp_models/models/corn/: corn.urdf.xml  model.config
ltfnp_models/models/fork/: Fork.dae  fork.urdf.xml  model.config
ltfnp_models/models/glass/: Mug.dae  glass.urdf.xml  model.config
ltfnp_models/models/kelloggs/: kelloggs.urdf.xml  model.config
ltfnp_models/models/ketchup/: HelaCurryKetchup.dae  ketchup.urdf.xml  model.config
ltfnp_models/models/knife/: KitchenKnife.dae  knife.urdf.xml  model.config
ltfnp_models/models/lion/: lion.urdf.xml  model.config
ltfnp_models/models/meersalz/: MeerSalz.dae
ltfnp_models/models/milk/: Vollmilch.dae  milk.urdf.xml  model.config
ltfnp_models/models/muesli/: KelloggsCornFlakes.dae  model.config  muesli.urdf.xml
ltfnp_models/models/oregano/: model.config  oregano.urdf.xml
ltfnp_models/models/pancakemix/: model.config  pancakemix.urdf.xml
ltfnp_models/models/red_metal_bowl_white_speckles/: model.config  red_metal_bowl_white_speckles.dae  red_metal_bowl_white_speckles.stl  red_metal_bowl_white_speckles.urdf.xml
ltfnp_models/models/red_metal_bowl_white_speckles/kinbody/: poisson.kinbody.xml  tsdf.kinbody.xml
ltfnp_models/models/red_metal_cup_white_speckles/: model.config  red_metal_cup_white_speckles.dae  red_metal_cup_white_speckles.stl  red_metal_cup_white_speckles.urdf.xml
ltfnp_models/models/red_metal_cup_white_speckles/kinbody/: poisson.kinbody.xml  tsdf.kinbody.xml
ltfnp_models/models/red_metal_plate_white_speckles/: model.config  red_metal_plate_white_speckles.dae  red_metal_plate_white_speckles.urdf.xml
ltfnp_models/models/red_metal_plate_white_speckles/kinbody/: poisson.kinbody.xml  tsdf.kinbody.xml
ltfnp_models/models/salt/: MarkenSalz.dae  model.config  salt.urdf.xml
ltfnp_models/models/saltdispenser/: model.config  saltdispenser.urdf.xml
ltfnp_models/models/scene_camera/: model.config  scene_camera.urdf
ltfnp_models/models/scene_camera_1/: model.config  scene_camera.urdf.xml
ltfnp_models/models/scene_camera_2/: model.config  scene_camera.urdf.xml
ltfnp_models/models/scene_camera_3/: model.config  scene_camera.urdf.xml
ltfnp_models/models/scene_camera_4/: model.config  scene_camera.urdf.xml
ltfnp_models/models/shopping_area/: model.config  shopping_area.urdf.xml
ltfnp_models/models/shopping_rack/: model.config  shopping_rack.urdf.xml
ltfnp_models/models/spoon/: Spoon.dae  model.config  spoon.urdf.xml
ltfnp_models/models/stainless_steel_fork_red_handle/kinbody/: poisson.kinbody.xml  tsdf.kinbody.xml
ltfnp_models/models/stainless_steel_knife_red_handle/kinbody/: poisson.kinbody.xml  tsdf.kinbody.xml
ltfnp_models/models/tomatosauce/: model.config  tomatosauce.urdf.xml
ltfnp_models/owl/: objects.owl  shopping_area.owl  shopping_rack.owl
ltfnp_reasoning/: .gitignore  CMakeLists.txt  build.gradle  package.xml  settings.gradle
ltfnp_reasoning/launch/: ltfnp_reasoning.launch  test.launch
ltfnp_reasoning/ltfnp_reasoning/src/main/java/org/knowrob/ltfnp_reasoning/: LTFnPReasoner.java
ltfnp_reasoning/prolog/: init.pl  ltfnp_reasoning.pl  shopping_scenario_reasoning.pl
ltfnp_reasoning/shopping_scenario_reasoning/: build.gradle
ltfnp_reasoning/shopping_scenario_reasoning/src/main/java/org/knowrob/shopping_scenario_reasoning/: RackReasoner.java
pr2_moveit_node/: CMakeLists.txt  package.xml
pr2_moveit_node/config/: controllers.yaml  fake_controllers.yaml  ompl_planning.yaml  pr2.srdf
pr2_moveit_node/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  nav_pcontroller.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  pr2_moveit_controller_manager.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
pr2_moveit_node/models/: pr2.urdf
pr2_moveit_node/models/altered_pr2/: gripper.gazebo.xacro  gripper.urdf.xacro  pr2.urdf.xacro  upload_pr2.launch
