<?xml version="1.0"?>
<package>
  <name>ltfnp</name>
  <version>0.0.1</version>
  <description>
    
    Metapackage for ltfnp related code, models, and meta
    data.
    
  </description>
  
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>
  <author email="winkler@cs.uni-bremen.de">Jan Winkler</author>
  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- ltfnp packages -->
  <run_depend>ltfnp_models</run_depend>
  <run_depend>ltfnp_maps</run_depend>
  <run_depend>ltfnp_executive</run_depend>
  <run_depend>ltfnp_gazebo</run_depend>
  
  <!-- external packages -->
  <run_depend>robosherlock_process_module</run_depend>
  <run_depend>gazebo_perception_process_module</run_depend>
  <run_depend>cram_gazebo_utilities</run_depend>
  <run_depend>iai_common_msgs</run_depend>
  <run_depend>nav_pcontroller</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>
