<?xml version="1.0"?>
<package>
  <name>ltfnp_models</name>
  <version>0.0.1</version>
  <description>
    
    Auxiliary repository for holding object and area models for
    shopping scenarios.
    
  </description>
  
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>
  <author email="winkler@cs.uni-bremen.de">Jan Winkler</author>
  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>gazebo_ros</run_depend>
  
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"
		gazebo_media_path="${prefix}"
		plugin_path="${prefix}/lib"/>
  </export>
</package>
